Camera sensor size does not honor scene scale factor #34481

Closed
opened 2013-03-01 00:35:42 +01:00 by Tobias Oelgarte · 8 comments

%%%I could write a lengthy description of the bug, but i already did at blenderartist.org. So i will give just include two links to two comments from myself, which should make clear whats going on:

http://blenderartists.org/forum/showthread.php?216113-Brecht-s-easter-egg-surprise-Modernizing-shading-and-rendering&p=2318109&viewfull=1#post2318109

http://blenderartists.org/forum/showthread.php?216113-Brecht-s-easter-egg-surprise-Modernizing-shading-and-rendering&p=2318528&viewfull=1#post2318528

In short: The camera sensor size has a default size of 32mm, which equals 0.032BE. But regardless of the scene scale it will always be treated as 0.032BE. So if i set the scene scale to 10, then i have a sensor with 320mm. -> Sensor size should be divided by scene scale, to still be 32mm.

%%%

%%%I could write a lengthy description of the bug, but i already did at blenderartist.org. So i will give just include two links to two comments from myself, which should make clear whats going on: http://blenderartists.org/forum/showthread.php?216113-Brecht-s-easter-egg-surprise-Modernizing-shading-and-rendering&p=2318109&viewfull=1#post2318109 http://blenderartists.org/forum/showthread.php?216113-Brecht-s-easter-egg-surprise-Modernizing-shading-and-rendering&p=2318528&viewfull=1#post2318528 In short: The camera sensor size has a default size of 32mm, which equals 0.032BE. But regardless of the scene scale it will always be treated as 0.032BE. So if i set the scene scale to 10, then i have a sensor with 320mm. -> Sensor size should be divided by scene scale, to still be 32mm. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%The ratio of the sensor size and focal length defines the field of view, but sensor size does not and should not affect depth of field. The amount depth of field is proportional to the aperture radius, or alternatively to the ratio of the focal length over f/stop.

Anyway, the issue is that the tooltip that says that the focal length is in mm is wrong when using f/stop. I'm not sure what the solution would be here or if it needs to be solved. We could add units to focal length and sensor size but it would be annoying to have these values change as you change scene scale when you're not using f/stop.%%%

%%%The ratio of the sensor size and focal length defines the field of view, but sensor size does not and should not affect depth of field. The amount depth of field is proportional to the aperture radius, or alternatively to the ratio of the focal length over f/stop. Anyway, the issue is that the tooltip that says that the focal length is in mm is wrong when using f/stop. I'm not sure what the solution would be here or if it needs to be solved. We could add units to focal length and sensor size but it would be annoying to have these values change as you change scene scale when you're not using f/stop.%%%

%%%The problem is that the camera (model) does not scale at all, while i can scale the entire geometry without any problem.

  • f-stop is a unit independent value. (will never be a problem of it's own)
  • The focal depth is already in units, which should stay that way.
  • The sensor size is also alright and does not need to be scaled. It is in mm and it stays in mm regardless of scale.

But the camera (the lens thing) should adopt to the scene scale value. Otherwise f-stop and sensor size will both be affected by scene scale and are not comparable to real world cameras, if the scene scale isn't 1 (1 unit = 1m).%%%

%%%The problem is that the camera (model) does not scale at all, while i can scale the entire geometry without any problem. * f-stop is a unit independent value. (will never be a problem of it's own) * The focal depth is already in units, which should stay that way. * The sensor size is also alright and does not need to be scaled. It is in mm and it stays in mm regardless of scale. But the camera (the lens thing) should adopt to the scene scale value. Otherwise f-stop and sensor size will both be affected by scene scale and are not comparable to real world cameras, if the scene scale isn't 1 (1 unit = 1m).%%%

%%%The unit system is purely a user interface display thing, it should not affect how anything renders. That's a basic design thing to keep the scene and camera decoupled and make things like library linking work.

Further I can't tell if you disagree or if you're just stating things in different words.%%%

%%%The unit system is purely a user interface display thing, it should not affect how anything renders. That's a basic design thing to keep the scene and camera decoupled and make things like library linking work. Further I can't tell if you disagree or if you're just stating things in different words.%%%

%%%Lets say i have two scenes which in metric dimensions are the same, but one of it has a scene scale of 10 (in internal units [BU] it is ten times smaller). If i have now a camera in this scene, then it is rendered differently, even if the metric focus distance and the f-stop is equal (both focus on same part and have same metric position).

The problem is that in the first scene (scene scale=1) you have normal camera. But in the second scene (scene scale=10) it is rendered as if the camera (lens and stuff) itself is ten times bigger (You traded a mobile phone camera for a telescope) . Thats also why it renders as if the camera would focus on a much closer distance, which is logical if the camera is that big, but shouldn't be that big.%%%

%%%Lets say i have two scenes which in metric dimensions are the same, but one of it has a scene scale of 10 (in internal units [BU] it is ten times smaller). If i have now a camera in this scene, then it is rendered differently, even if the metric focus distance and the f-stop is equal (both focus on same part and have same metric position). The problem is that in the first scene (scene scale=1) you have normal camera. But in the second scene (scene scale=10) it is rendered as if the camera (lens and stuff) itself is ten times bigger (You traded a mobile phone camera for a telescope) . Thats also why it renders as if the camera would focus on a much closer distance, which is logical if the camera is that big, but shouldn't be that big.%%%

%%%I'd like to note that currently, if it scales the Aperture from 1mm to 1cm by scene scale 10, the feedback the user get is wrong, or could be understand wrong. Since the Focal Length and Sensor Size still let you assume it is a 35mm Lens and a 32mm Sensor, but the aperture now shows 1cm.

How about a Checkbox in the Camera to let it either not scaled (as it is now) or to let it scale everything?

I don't think the camera should generally adopt to the scene scale. If it would i could set scene scale from 1 to 10 and get completely different results if i don't match metrical scale by scaling the Object.

@Niabot. Ich hoffe du siehst diesen Punkt. Wenn ich zum Beispiel eine 3d Modell mit Kamera von irgendwo in Blender lade und alles ist viel zu gross, kann ich mit dem Scale alles verkleinern, ohne veränderung der Kamera, bzw DOF.
Ich wünsche dir (read You) einen schönen Abend. Gruss bashi
%%%

%%%I'd like to note that currently, if it scales the Aperture from 1mm to 1cm by scene scale 10, the feedback the user get is wrong, or could be understand wrong. Since the Focal Length and Sensor Size still let you assume it is a 35mm Lens and a 32mm Sensor, but the aperture now shows 1cm. How about a Checkbox in the Camera to let it either not scaled (as it is now) or to let it scale everything? I don't think the camera should generally adopt to the scene scale. If it would i could set scene scale from 1 to 10 and get completely different results if i don't match metrical scale by scaling the Object. @Niabot. Ich hoffe du siehst diesen Punkt. Wenn ich zum Beispiel eine 3d Modell mit Kamera von irgendwo in Blender lade und alles ist viel zu gross, kann ich mit dem Scale alles verkleinern, ohne veränderung der Kamera, bzw DOF. Ich wünsche dir (read You) einen schönen Abend. Gruss bashi %%%

%%%Fix in svn, the camera focal length and sensor size show units now.%%%

%%%Fix in svn, the camera focal length and sensor size show units now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34481
No description provided.