Fix #34481: camera focal length and sensor size did not use units yet, now they do.

I've added a separate camera unit type. It's a bit strange to have an exception for
this but it ensures units are shown in familiar millimeters and it also ensures
backwards compatibility.